# confluence-cli

./: .gitignore  .goreleaser.yml  CLAUDE.md  Dockerfile.goreleaser  Makefile  README.md  codecov.yml  go.mod  go.sum  main.go
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml  spec-auto-release.yml  spec-drift.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
cmd/: all_coverage_gaps_test.go  attachments.go  attachments_test.go  avatar.go  avatar_test.go  batch.go  batch_coverage_test.go  batch_custom_commands_test.go  batch_internal_test.go  batch_test.go  blogposts.go  blogposts_test.go  comments.go  comments_test.go  configure.go  configure_coverage_test.go  configure_test.go  coverage_100_test.go  coverage_gaps_test.go  crud_attachments_coverage_test.go  crud_pages_coverage_test.go  custom_content.go  custom_content_test.go  diff.go  diff_coverage_test.go  diff_schema.go  diff_test.go  export.go  export_cmd_test.go  export_coverage_test.go  export_schema.go  export_test.go  labels.go  labels_test.go  misc_coverage_test.go  pages.go  pages_test.go  policy_audit_test.go  preset.go  preset_schema.go  (+26 more)
npm/: README.md  install.js  package.json
python/: README.md  pyproject.toml
python/confluence_cf/: __init__.py
spec/: SPEC_GAPS.md  confluence-v2-latest.json  confluence-v2.json
website/: index.md  package-lock.json  package.json
(+204 files in other folders)
