[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-cf"
version = "0.0.0"
description = "Agent-friendly Confluence CLI with structured JSON output and jq filtering"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
keywords = ["confluence", "cli", "ai", "agent", "json"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://sofq.github.io/confluence-cli/"
Documentation = "https://sofq.github.io/confluence-cli/"
Repository = "https://github.com/sofq/confluence-cli"
Issues = "https://github.com/sofq/confluence-cli/issues"

[project.scripts]
cf = "confluence_cf:main"

[tool.setuptools.packages.find]
where = ["."]
